--- a/CalculationEngine/App.config
+++ b/CalculationEngine/App.config
@@ -6,6 +6,8 @@
   <appSettings>
     <add key="MaxDifference" value="10"/>
     <add key="MaxFluidLevel" value="100"/>
+    <add key="NominalFluidLvlTank1" value="50"/>
+    <add key="NominalFluidLvlTank2" value="80"/>
   </appSettings>
   <system.serviceModel>
     <services>
