--- a/PubSub/PubSub.csproj
+++ b/PubSub/PubSub.csproj
@@ -62,6 +62,10 @@
       <Project>{6109286A-0DC9-469C-A271-0605C18ED32C}</Project>
       <Name>PubSubCommon</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SCADA\ScadaCommon\ScadaCommon.csproj">
+      <Project>{823D1355-EFD0-481C-A0D9-FDA0C4EA37DF}</Project>
+      <Name>ScadaCommon</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TransactionManagerContracts\TransactionManagerContracts.csproj">
       <Project>{0A8F68EC-31CB-4FD1-B54A-DCF2FC97BBEC}</Project>
       <Name>TransactionManagerContracts</Name>
