Connect database with UI.

--- a/UserInterface/App.config
+++ b/UserInterface/App.config
@@ -17,6 +17,9 @@
       <endpoint address="net.tcp://localhost:10022/ICommandingServiceContract" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.ICommandingServiceContract" name="UICommandingService" />
 
       <endpoint address="net.tcp://localhost:10058/IAlarmEventService" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService" name="AlarmEventService" />
+    
+      <endpoint address="net.tcp://localhost:10059/IMeasurementRepository" binding="netTcpBinding" contract="RepositoryCore.Interfaces.IMeasurementRepository" name="MeasurementEndPoint" />
+
     </client>
   </system.serviceModel>
   
