--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Model\TapChanger.cs" />
     <Compile Include="Model\Transformator.cs" />
     <Compile Include="Model\UIModel.cs" />
+    <Compile Include="Networking\MeasurementProxy.cs" />
     <Compile Include="ProxyPool\AlarmEventServiceProxy.cs" />
     <Compile Include="ProxyPool\CommandingServiceProxy.cs" />
     <Compile Include="ProxyPool\ProxyServices.cs" />
