--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Model\Disconector.cs" />
     <Compile Include="Model\Enums.cs" />
     <Compile Include="Model\IEquipment.cs" />
+    <Compile Include="Model\Measurement.cs" />
     <Compile Include="Model\Substation.cs" />
     <Compile Include="Model\TapChanger.cs" />
     <Compile Include="Model\Transformator.cs" />
