--- a/NMSSelfHost/App.config
+++ b/NMSSelfHost/App.config
@@ -1,5 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+        
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </configSections>
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
@@ -12,12 +16,12 @@
            2 = Warning - Gives errors and warnings
            3 = Info    - Gives more detailed error information
            4 = Verbose - Gives verbose trace information.    -->
-      <add name="TraceLevel" value = "Info" />
+      <add name="TraceLevel" value="Info" />
     </switches>
   </system.diagnostics>
 
   <connectionStrings>
-    <add name="networkModelconnectionString"	connectionString="../NetworkModelData.data"/>
+    <add name="networkModelconnectionString" connectionString="../NetworkModelData.data" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" />
@@ -27,14 +31,12 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="NMS.ServiceBehavior" name="NetworkModelService.GDA.GenericDataAccess">
-        <endpoint address="" binding="netTcpBinding" contract="NetworkModelGDAContract.INetworkModelGDAContract"
-                  bindingConfiguration="netTcpBindingNoSecurity">
+        <endpoint address="" binding="netTcpBinding" contract="NetworkModelGDAContract.INetworkModelGDAContract" bindingConfiguration="netTcpBindingNoSecurity">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract"
-                  bindingConfiguration="netTcpBindingNoSecurity">
+        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract" bindingConfiguration="netTcpBindingNoSecurity">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -46,8 +48,7 @@
         </host>
       </service>
       <service behaviorConfiguration="NMS.ServiceBehavior" name="NetworkModelService.NotifyNMSService">
-        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.INotifyNMS"
-                  bindingConfiguration="netTcpBindingNoSecurity">
+        <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.INotifyNMS" bindingConfiguration="netTcpBindingNoSecurity">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -64,23 +65,21 @@
       <!-- CE Service-->
       <endpoint address="net.tcp://localhost:10000/CE" behaviorConfiguration="NMSClientBehavior" binding="netTcpBinding" bindingConfiguration="netTcpBindingNoSecurity" contract="TransactionManagerContracts.IModelUpdateContract" name="CE">
         <identity>
-          <dns value="localhost"/>
+          <dns value="localhost" />
         </identity>
       </endpoint>
 
       <endpoint address="net.tcp://localhost:10055/NDS" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract" name="NDS">
         <identity>
-          <dns value="localhost"/>
+          <dns value="localhost" />
         </identity>
       </endpoint>
     </client>
     
     <bindings>
       <netTcpBinding>
-        <binding name="netTcpBindingNoSecurity" closeTimeout="00:30:00"
-				 openTimeout="00:30:00" sendTimeout="00:10:00" receiveTimeout="10:30:00" maxBufferSize="2147483647"
-				  maxReceivedMessageSize="2147483647">
-          <readerQuotas maxStringContentLength="2147483647" maxArrayLength="2147483647"/>
+        <binding name="netTcpBindingNoSecurity" closeTimeout="00:30:00" openTimeout="00:30:00" sendTimeout="00:10:00" receiveTimeout="10:30:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxStringContentLength="2147483647" maxArrayLength="2147483647" />
           <security mode="None">
             <transport clientCredentialType="None" protectionLevel="None" />
           </security>
@@ -92,23 +91,24 @@
       <serviceBehaviors>
         <behavior name="NMS.ServiceBehavior">
           <serviceMetadata httpGetEnabled="false" />
-          <serviceThrottling
-           maxConcurrentCalls="1000"
-           maxConcurrentSessions="1000"
-           maxConcurrentInstances="1000"
-          />
+          <serviceThrottling maxConcurrentCalls="1000" maxConcurrentSessions="1000" maxConcurrentInstances="1000" />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="NMSClientBehavior">
           <clientCredentials supportInteractive="false">
-            <windows allowNtlm="true" allowedImpersonationLevel="Impersonation"/>
+            <windows allowNtlm="true" allowedImpersonationLevel="Impersonation" />
           </clientCredentials>
-          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+          <dataContractSerializer maxItemsInObjectGraph="2147483647" />
         </behavior>
       </endpointBehaviors>
     </behaviors>
 
   </system.serviceModel>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
