--- a/UserInterface/packages.config
+++ b/UserInterface/packages.config
@@ -2,9 +2,18 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="net461" />
   <package id="ControlzEx" version="4.3.0" targetFramework="net461" />
+  <package id="DevExpress.Data" version="20.1.4" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="MahApps.Metro" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
+  <package id="YshXaf.DevExpress.Data_yesfree" version="18.2.5" targetFramework="net461" />
+  <package id="YshXaf.DevExpress.Images_yesfree" version="18.2.5" targetFramework="net461" />
+  <package id="YshXaf.DevExpress.Mvvm_yesfree" version="18.2.5" targetFramework="net461" />
+  <package id="YshXaf.DevExpress.Pdf.Core_yesfree" version="18.2.5" targetFramework="net461" />
+  <package id="YshXaf.DevExpress.Printing.Core_yesfree" version="18.2.5" targetFramework="net461" />
+  <package id="YshXaf.DevExpress.Xpf.Core_yesfree" version="18.2.5" targetFramework="net461" />
+  <package id="YshXaf.DevExpress.Xpf.Grid.Core_yesfree" version="18.2.5" targetFramework="net461" />
+  <package id="YshXaf.DevExpress.Xpf.Grid_yesfree" version="18.2.5" targetFramework="net461" />
 </packages>
