--- a/UserInterface/packages.config
+++ b/UserInterface/packages.config
@@ -7,4 +7,5 @@
   <package id="MahApps.Metro" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="2.0.0" targetFramework="net461" />
 </packages>
