--- a/UserInterface/packages.config
+++ b/UserInterface/packages.config
@@ -16,4 +16,5 @@
   <package id="YshXaf.DevExpress.Xpf.Core_yesfree" version="18.2.5" targetFramework="net461" />
   <package id="YshXaf.DevExpress.Xpf.Grid.Core_yesfree" version="18.2.5" targetFramework="net461" />
   <package id="YshXaf.DevExpress.Xpf.Grid_yesfree" version="18.2.5" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="2.0.0" targetFramework="net461" />
 </packages>
