--- a/UserInterface/packages.config
+++ b/UserInterface/packages.config
@@ -8,6 +8,7 @@
   <package id="MahApps.Metro" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="2.0.0" targetFramework="net461" />
   <package id="YshXaf.DevExpress.Data_yesfree" version="18.2.5" targetFramework="net461" />
   <package id="YshXaf.DevExpress.Images_yesfree" version="18.2.5" targetFramework="net461" />
   <package id="YshXaf.DevExpress.Mvvm_yesfree" version="18.2.5" targetFramework="net461" />
