--- a/UserInterface/UserInterface.csproj
+++ b/UserInterface/UserInterface.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>analytics_graph_online_statistics_icon_127207.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonServiceLocator, Version=2.0.5.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.2.0.5\lib\net46\CommonServiceLocator.dll</HintPath>
@@ -393,6 +396,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\alarm-bell.png" />
+    <Resource Include="analytics_graph_online_statistics_icon_127207.ico" />
     <Content Include="Assets\completeGif.mp4" />
     <Resource Include="Assets\scadaCon.gif" />
   </ItemGroup>
