--- a/ServiceFabricApp/CalculationEngine/CalculationEngine.csproj
+++ b/ServiceFabricApp/CalculationEngine/CalculationEngine.csproj
@@ -94,6 +94,9 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\TapChanger.cs" />
+    <Compile Include="Model\Transformer.cs" />
+    <Compile Include="Model\TransformerWinding.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CalculationEngine.cs" />
     <Compile Include="Program.cs" />
@@ -122,19 +125,19 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{6c234280-508a-47a4-b9ca-2677082ef85f}</Project>
+      <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
       <Name>Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\PubSubCommon\PubSubCommon.csproj">
-      <Project>{6109286a-0dc9-469c-a271-0605c18ed32c}</Project>
+      <Project>{6109286A-0DC9-469C-A271-0605C18ED32C}</Project>
       <Name>PubSubCommon</Name>
     </ProjectReference>
     <ProjectReference Include="..\ScadaCommon\ScadaCommon.csproj">
-      <Project>{823d1355-efd0-481c-a0d9-fda0c4ea37df}</Project>
+      <Project>{823D1355-EFD0-481C-A0D9-FDA0C4EA37DF}</Project>
       <Name>ScadaCommon</Name>
     </ProjectReference>
     <ProjectReference Include="..\TransactionManagerContracts\TransactionManagerContracts.csproj">
-      <Project>{0a8f68ec-31cb-4fd1-b54a-dcf2fc97bbec}</Project>
+      <Project>{0A8F68EC-31CB-4FD1-B54A-DCF2FC97BBEC}</Project>
       <Name>TransactionManagerContracts</Name>
     </ProjectReference>
   </ItemGroup>
