--- a/ServiceFabricApp/ScadaCommon/ScadaCommon.csproj
+++ b/ServiceFabricApp/ScadaCommon/ScadaCommon.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Utility\UniqueIdGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Common.csproj">
+    <ProjectReference Include="..\Common\Common.csproj">
       <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
       <Name>Common</Name>
     </ProjectReference>
