Scada on cloud started

--- a/ServiceFabricApp/Common/Common.csproj
+++ b/ServiceFabricApp/Common/Common.csproj
@@ -63,5 +63,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trace\CommonTrace.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
