--- a/ServiceFabricApp/DynamicDataProccessorService/DynamicDataProccessorService.csproj
+++ b/ServiceFabricApp/DynamicDataProccessorService/DynamicDataProccessorService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x64</Platform>
-    <ProjectGuid>{CDBF7033-9BC3-4FF7-B54C-AD1AF66A78FC}</ProjectGuid>
+    <ProjectGuid>{3EAD47A2-0701-4528-9309-6B7FDED33371}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CalculationEngine</RootNamespace>
-    <AssemblyName>CalculationEngine</AssemblyName>
+    <RootNamespace>DynamicDataProccessorService</RootNamespace>
+    <AssemblyName>DynamicDataProccessorService</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -51,12 +51,6 @@
     <Reference Include="Microsoft.ServiceFabric.Diagnostics, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
       <HintPath>..\packages\Microsoft.ServiceFabric.Diagnostics.Internal.4.1.456\lib\net461\Microsoft.ServiceFabric.Diagnostics.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.ServiceFabric.FabricTransport, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.FabricTransport.Internal.4.1.456\lib\net461\Microsoft.ServiceFabric.FabricTransport.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.FabricTransport.V2, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.FabricTransport.Internal.4.1.456\lib\net461\Microsoft.ServiceFabric.FabricTransport.V2.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.ServiceFabric.Internal, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
       <HintPath>..\packages\Microsoft.ServiceFabric.7.1.456\lib\net461\Microsoft.ServiceFabric.Internal.dll</HintPath>
     </Reference>
@@ -72,14 +66,7 @@
     <Reference Include="Microsoft.ServiceFabric.Services, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
       <HintPath>..\packages\Microsoft.ServiceFabric.Services.4.1.456\lib\net461\Microsoft.ServiceFabric.Services.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Services.Remoting, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.Services.Remoting.4.1.456\lib\net461\Microsoft.ServiceFabric.Services.Remoting.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ServiceFabric.Services.Wcf, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.ServiceFabric.Services.Wcf.4.1.456\lib\net45\Microsoft.ServiceFabric.Services.Wcf.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Fabric, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
       <HintPath>..\packages\Microsoft.ServiceFabric.7.1.456\lib\net461\System.Fabric.dll</HintPath>
@@ -94,52 +81,16 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\TapChanger.cs" />
-    <Compile Include="Model\Transformer.cs" />
-    <Compile Include="Model\TransformerWinding.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CalculationEngine.cs" />
+    <Compile Include="DynamicDataProccessorService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ServiceEventSource.cs" />
-    <Compile Include="Calculations\CalcEngine.cs" />
-    <Compile Include="Channels\CommandingProxy.cs" />
-    <Compile Include="Model\Analog.cs" />
-    <Compile Include="Model\AsyncMachine.cs" />
-    <Compile Include="Model\ConcreteModel.cs" />
-    <Compile Include="Model\Discrete.cs" />
-    <Compile Include="Model\IdObject.cs" />
-    <Compile Include="Calculations\ProcessingData.cs" />
-    <Compile Include="Calculations\PublishMeasurements.cs" />
-    <Compile Include="Channels\SubscribeProxy.cs" />
-    <Compile Include="Model\Tank.cs" />
-    <Compile Include="TransactionStuff\ModelUpdateContract.cs" />
-    <Compile Include="TransactionStuff\TransactionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PackageRoot\Config\Settings.xml" />
-    <None Include="PackageRoot\ServiceManifest.xml">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="PackageRoot\ServiceManifest.xml" />
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PubSubCommon\PubSubCommon.csproj">
-      <Project>{6109286A-0DC9-469C-A271-0605C18ED32C}</Project>
-      <Name>PubSubCommon</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ScadaCommon\ScadaCommon.csproj">
-      <Project>{823D1355-EFD0-481C-A0D9-FDA0C4EA37DF}</Project>
-      <Name>ScadaCommon</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TransactionManagerContracts\TransactionManagerContracts.csproj">
-      <Project>{0A8F68EC-31CB-4FD1-B54A-DCF2FC97BBEC}</Project>
-      <Name>TransactionManagerContracts</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
