--- a/ServiceFabricApp/PubSubCommon/PubSubCommon.csproj
+++ b/ServiceFabricApp/PubSubCommon/PubSubCommon.csproj
@@ -60,5 +60,8 @@
       <Name>ScadaCommon</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
