--- a/ServiceFabricApp/ScadaCommon/ScadaCommon.csproj
+++ b/ServiceFabricApp/ScadaCommon/ScadaCommon.csproj
@@ -82,8 +82,11 @@
     <Compile Include="Utility\UniqueIdGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Common.csproj">
-      <Project>{6C234280-508A-47A4-B9CA-2677082EF85F}</Project>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{6c234280-508a-47a4-b9ca-2677082ef85f}</Project>
       <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
