--- a/ServiceFabricApp/TransactionManagerContracts/TransactionManagerContracts.csproj
+++ b/ServiceFabricApp/TransactionManagerContracts/TransactionManagerContracts.csproj
@@ -56,5 +56,8 @@
       <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
