--- a/ServiceFabricApp/TransactionManagerContracts/packages.config
+++ b/ServiceFabricApp/TransactionManagerContracts/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.ServiceFabric" version="7.1.456" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Azure.Fabric.MSBuild" version="1.7.1" targetFramework="net461" />
 </packages>
