--- a/ServiceFabricApp/TransactionManager/TransactionManager.csproj
+++ b/ServiceFabricApp/TransactionManager/TransactionManager.csproj
@@ -81,10 +81,13 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnlistManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TMData.cs" />
     <Compile Include="TransactionManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ServiceEventSource.cs" />
+    <Compile Include="TransactionSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PackageRoot\Config\Settings.xml" />
