--- a/ServiceFabricApp/StateUpdaterService/App.config
+++ b/ServiceFabricApp/StateUpdaterService/App.config
@@ -12,4 +12,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <system.serviceModel>
+    <client>
+      <endpoint address="net.tcp://localhost:7001/Pub" binding="netTcpBinding" contract="PubSubCommon.IPub" name="PublisherEndPoint" />
+    </client>
+  </system.serviceModel>
+  
 </configuration>
